
- Patch #1338314, Bug #1336623: fix tarfile so it can extract
  REGTYPE directories from tarfiles written by old programs.

- Patch #1309009, Fix segfault in pyexpat when the XML document is in latin_1,
  but Python incorrectly assumes it is in UTF-8 format

- Fix parse errors in the readline module when compiling without threads.

Library
-------

- Bug #1394565: SimpleHTTPServer now doesn't choke on query parameters
  any more.
  
- Bug #1403410: The warnings module now doesn't get confused
  when it can't find out the module name it generates a warning for.
  
- Patch #1117398: cookielib.LWPCookieJar and .MozillaCookieJar now raise
  LoadError as documented, instead of IOError.  For compatibility,
  LoadError subclasses IOError.

- Bug #1365984: urllib now opens "data:" URLs again.

- Patch #1314396: Prevent threading.Thread.join() from blocking if a previous
  call caused an exception to be raised (e.g., calling join() with an illegal
  argument).

- urllib.unquote() now handles Unicode strings correctly.  Formerly, it would
  either ignore the substitution or raise UnicodeDecodeError.

- SF #1313496:  the bisect module now accepts named arguments.

- Bug #729103: pydoc.py: Fix docother() method to accept additional
  "parent" argument.

- Patch #1300515: xdrlib.py: Fix pack_fstring() to really use null bytes
  for padding.

- Bug #1296004: httplib.py: Limit maximal amount of data read from the
  socket to avoid a MemoryError on Windows.

Tools/Demos
-----------

- Fixed a display glitch in Pynche, which could cause the right arrow to
  wiggle over by a pixel.

What's New in Python 2.4.2 final?
=================================

*Release date: 28-SEP-2005*

Extension Modules
-----------------

- Patches #1298449 and #1298499: Add some missing checks for error
  returns in cStringIO.c.

- Patch #1297028: fix segfault if call type on MultibyteCodec,
  MultibyteStreamReader, or MultibyteStreamWriter.

Tests
-----
