@@ -68,12 +68,14 @@ Extension Modules
 Library
 -------
 
+- Bug #1371247: Update Windows locale identifiers in locale.py.
+
 - Bug #1394565: SimpleHTTPServer now doesn't choke on query parameters
   any more.
-  
+
 - Bug #1403410: The warnings module now doesn't get confused
   when it can't find out the module name it generates a warning for.
-  
+
 - Patch #1117398: cookielib.LWPCookieJar and .MozillaCookieJar now raise
   LoadError as documented, instead of IOError.  For compatibility,
   LoadError subclasses IOError.
